# focus

./: .gitignore  README.md  generate_compose.py  pyproject.toml  requirements.txt
actual/: README.md  docker-compose.yml
foundryvtt/: README.md  docker-compose.yml
gloomhaven/: README.md  docker-compose.yml  run_client.py
homebridge/: docker-compose.yml
jellyfin/: README.md  docker-compose.yml
nextcloud/: README.md  docker-compose.yml
nextcloud/apache2/: 000-default.conf
plex/: README.md  docker-compose.yml
portainer/: README.md  docker-compose.yml
protonvpn/: README.md  generate_config.py  requirements.txt  template  template_community.service  template_official.service
setup/: README.md  setup
setup/Terminal/: .zshrc  Custom.terminal  setup  ssh_with_password.template
setup/Terminal/.zsh/: 00-misc.zsh  01-alias.zsh  02-env.zsh
setup/Updates/: brew_update.sh  setup  xyz.ryanliu6.update.plist
traefik/: README.md  docker-compose.yml  generate_password.sh  traefik.yml
traefik/rules/: whitelist.yml
transmission/: README.md  docker-compose.yml  settings.json
watchtower/: README.md  docker-compose.yml
wireguard/: docker-compose.yml
