[project]
name = "focus"
version = "1.0.0"
description = "Focus project"
requires-python = ">=3.8"
dependencies = [
    "click>=8.1.2",
    "vigor>=0.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["focus"]

[tool.uv]
pip = { no-binary = [] }  # Keep default binary packages
requirements-file = "requirements.txt"  # For compatibility
